fix SearchForm box shadow not appearing on ios

--- a/src/features/search/components/SearchForm/SearchForm.module.css
+++ b/src/features/search/components/SearchForm/SearchForm.module.css
@@ -12,6 +12,7 @@
   border-radius: 20px;
   outline: none;
   box-shadow: 0 2px 5px 0 rgba(60, 64, 67, 0.16);
+  -webkit-appearance: none;
 }
 .searchIcon {
   color: var(--googleGrey);
